2008-06-20  Angelo Graziosi  <angelo.graziosi@alice.it>  (tiny change)

	* configure.in: Check for presence of cfmakeraw and cfsetspeed.

2008-06-15  Glenn Morris  <rgm@gnu.org>

	* info/dir: Add sasl.

2008-06-09  Alan Mackenzie  <acm@muc.de>

	* INSTALL.CVS: Clarify why `make bootstrap' sometimes fails.

2008-06-08  Eric S. Raymond  <esr@snark.thyrsus.com>

	* INSTALL.CVS: Indicate when "cvs update -d" may be needed.

2008-06-07  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (bootstrap-build): Remove mostlyclean, since it seems to
	serve no purpose.

2008-06-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (USE_LUCID, USE_MOTIF): Don't use "==".
	* configure: Regenerate.

2008-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* update-subdirs: Don't touch subdirs.el if it is unchanged.

2008-05-14  Kenichi Handa  <handa@m17n.org>

	* configure: Regenerate.

	* configure.in: Don't handle --disable-font-backend.  Don't print
	a message about a font backend.

2008-05-09  Glenn Morris  <rgm@gnu.org>

	* configure.in: Make absence of makeinfo a fatal error only if the info
	files don't exist.
	* Makefile.in (install-arch-indep, info): Handle MAKEINFO == off.

2008-05-07  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Fix last change: don't use < and > in "rem" lines,
	they are interpreted as redirection by DOS shells.

2008-05-04  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* configure.in: Check availability of AvailabilityMacros.h
	if HAVE_CARBON.

	* configure: Regenerate.

2008-05-03  Glenn Morris  <rgm@gnu.org>

	* configure.in (x_libraries): Remove standard 64-bit directories -
	experimental workaround for minor autoconf bug.

	* configure.in (--without-makeinfo): New option.  If set,
	absence of suitable makeinfo is not a fatal error.
	* Makefile.in (MAKEINFO): New, set by configure.
	(install-arch-indep): Without makeinfo, ignore any missing manuals.
	(info-real): New target.
	(info): Without makeinfo, do nothing, else call `info-real'.
