@@ -1,10 +1,17 @@
+2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* Makefile.in (emacs${EXEEXT}): Depend on the machine-specific files.
+	(bootstrap-clean): New target that keeps TAGS around.
+	(../lisp/subdirs.el, ../lisp/loaddefs.el): New targets.
+	(bootstrap-emacs${EXEEXT}): Depend on subdirs.el.
+
 2008-06-20  Jason Rumney  <jasonr@gnu.org>
 
-        * w32fns.c, w32term.c, w32term.h, w32gui.h [OLD_FONT]: Remove
-        obsolete font code.
+	* w32fns.c, w32term.c, w32term.h, w32gui.h [OLD_FONT]:
+	Remove obsolete font code.
 
-        * w32font.c (font_matches_spec): Use csb bitfield from font signature
-        to determine language support.
+	* w32font.c (font_matches_spec): Use csb bitfield from font signature
+	to determine language support.
 
 2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>
 
